# survana

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  config.toml  config_example.py  main.py  main_gradio.py  mkdocs.yml  pyproject.toml  results_df.csv  survana
docs/: c-index.md  docker.md  index.md  k-foldcv.md  mlflow.md  optuna.md
examples/: methylation_data.ipynb
frontend/static/: index.html
src/: sksurv_coxnet.py
src/data_processing/: data_models.py  dataloaders.py  datamergers.py
src/models/: coxph.py
src/survana/: __init__.py
src/survana.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/survana/artificial_data_generation/: generation.py  methods.py
src/survana/data_pre_filtering/: domain_filter.py
src/survana/data_processing/: data_models.py  data_subsampler.py  dataloaders.py  result.py  result_models.py
src/survana/frontend/: gradio_app.py
src/survana/models/: __init__.py  coxph.py  stability_selection.py
src/survana/result_processing/: plotting.py  result.py
src/survana/tuning/: optuna_objectives.py  training_wrappers.py
src/tuning/: optuna_objectives.py
test_data/: log(lambda)_-5_to_1_results__df.csv  test_matrix.csv  test_matrix_with_y.csv
tests/: conftest.py  test_artificial.py  test_integration.py  test_result.py  test_subsampler.py
