[project]
name = "survana"
version = "0"
requires-python = ">= 3.11"
description = "Biomarker and survival analysis software for thesis."
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "dotenv>=0.9.9",
    "dotenvx>=0.0.0",
    "fastapi>=0.116.1",
    "mkdocs>=1.6.1",
    "mlflow>=3.3.2",
    "mypy>=1.18.2",
    "optuna>=4.5.0",
    "pandas-stubs>=2.3.2.250827",
    "pathlib>=1.0.1",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.1",
    "scikit-survival>=0.25.0",
    "sqlalchemy>=2.0.43",
    "xgboost>=3.0.5",
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".
