[project]
name = "survana"
version = "0"
requires-python = ">= 3.11"
description = "Biomarker and survival analysis software for thesis."
readme = "README.md"
license = "AGPL-3.0-or-later"

dependencies = [
    "dotenv>=0.9.9",
    "dotenvx>=0.0.0",
    "fastapi>=0.116.1",
    "knockpy>=1.3.5",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.19.0",
    "mlflow>=3.3.2",
    "mypy>=1.18.2",
    "optuna>=4.5.0",
    "pandas-stubs>=2.3.2.250827",
    "pathlib>=1.0.1",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=9.0.0",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.1",
    "scikit-survival>=0.25.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "xgboost>=3.0.5",
    "ipykernel>=7.1.0",
    "pytest-skip-slow>=0.0.5",
    "pytest-plt>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/survana"]

[tool.hatch.build]
include = ["src/survana/py.typed"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
